# universal-agent

./: .gitmodules  LICENSE
simtap/: Cargo.toml  Todo.txt  circular.sh  domains.csv  run.sh
simtap/src/: dnsresolv.rs  flowmap.rs  main.rs  nat.rs  netif.rs  netif_keep.rs.txt  types.rs
