[package]
name = "simtap"
version = "0.1.0"
authors = ["kglavin <kglavin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etherparse = "0.8"
bitflags = "1.0"
nix = "0.13"
lru = "0.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
mac_utun = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
tun-tap = "0.1.2"

[[bin]]
name = "simtap"